chore: ensured versioning works
